# java-bytecode-tools

./: .gitignore  .pre-commit-config.yaml  .talismanrc  CHEATSHEET.md  CLAUDE.md  README.md  build.sh  run-all-tests.sh
.beads/: export-state.json  issues.jsonl  metadata.json
java/: pom.xml
precommit-scripts/: check-terminology  scan-history
python/: calltree.py  calltree_print.py  calltree_to_dot.py  ddg_format.py  find_called_methods.py  frames.py  frames_print.py  ftrace_expand_refs.py  ftrace_intra_slice.py  ftrace_semantic.py  ftrace_slice.py  ftrace_to_dot.py  ftrace_types.py  ftrace_validate.py  fw_calltree.py  jspmap_to_dot.py  node_types.py  pyproject.toml  reindex.conf.example  reindex.py  rev_calltree.py  test_calltree_to_dot.py  test_e2e_validation.py
python/jspmap/: chain_builder.py  jsf_bean_map.py  jsp_parser.py  jspmap.py  protocols.py
python/jspmap/tests/: test_chain_builder.py  test_jsf_bean_map.py  test_jsp_parser.py  test_jspmap.py  test_jspmap_recurse.py
python/tests/: test_aliasing_edge_bugs.py  test_assign_clusters.py  test_build_semantic_graph.py  test_calltree.py  test_calltree_print.py  test_calltree_to_dot.py  test_ddg_format.py  test_deduplicate_blocks.py  test_dot_rendering.py  test_dot_trap_clusters.py  test_e2e_validation.py  test_expand_refs.py  test_frames.py  test_frames_print.py  test_ftrace_inter_slice_unit.py  test_ftrace_intra_slice.py  test_ftrace_semantic.py  test_ftrace_semantic_to_dot.py  test_ftrace_slice_unit.py  test_ftrace_types.py  test_fw_calltree.py  test_jspmap_to_dot.py  test_merge_stmts.py  test_method_semantic_cfg.py  test_node_types.py  test_reindex.py  test_rev_calltree.py  test_validate.py
scripts/: bytecode.sh  icfg.sh
test-fixtures/: filter-no-exc.json  filter-stop.json  filter.json  index.scip  lib-test.sh  run-e2e.sh
(+175 files in other folders)
