[project]
name = "bytecode-tools"
version = "0.1.0"
description = "Visualization and post-processing for bytecode trace output"
requires-python = ">=3.13"
dependencies = ["beautifulsoup4>=4.12"]

[dependency-groups]
dev = ["black>=25.1", "pytest>=8.0"]

[project.scripts]
ftrace-to-dot = "ftrace_to_dot:main"
ftrace-slice = "ftrace_slice:main"
ftrace-expand-refs = "ftrace_expand_refs:main"
ftrace-semantic = "ftrace_semantic:main"
ftrace-validate = "ftrace_validate:main"
frames-print = "frames_print:main"
jspmap = "jspmap.jspmap:main"
jspmap-to-dot = "jspmap_to_dot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = ["tests", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["."]
